--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   line_icons: ^2.0.0
   form_field_validator: ^1.1.0
   sliding_up_panel: ^2.0.0+1
+  firebase_core: "^1.2.1"
+
 
 
   # The following adds the Cupertino Icons font to your application.
