--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   form_field_validator: ^1.1.0
   sliding_up_panel: ^2.0.0+1
   firebase_core: "^1.2.1"
+  google_nav_bar: ^5.0.5
 
 
 
